logs/infinite-160826_000405.log
TTLocalizer: Running in language: english
from toontown.toonbase.TTLocalizerEnglish import *
OTPLocalizer: Running in language: english
from otp.otpbase.OTPLocalizerEnglish import *
Preloading suits...
Preloading Toon heads...
Preloading avatars...
Traceback (most recent call last):
  File "D:\Documents\ToontownSourcecode\src\toontown\toonbase\ClientStart.py", line 240, in loadScripts
    execfile('mods/'+scriptName,globals())
  File "mods/Compilation.txt", line 206, in <module>
    toonAnywhere = DirectButton(text = ("Enable Toonup anywhere", "ENABLE TOONUP ANYWHERE", "enable toonup anywhere", "enable toonup anywhere"), scale=.06, pos = (-1,-0,-.3), command=ToonupAnywhere.toonUpSetUp)
NameError: name 'ToonupAnywhere' is not defined

phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['FndsLst_ScrollUp', 'FndsLst_ScrollDN', 'FndsLst_ScrollUp_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['FndsLst_ScrollUp', 'FndsLst_ScrollDN', 'FndsLst_ScrollUp_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3/models/gui/quit_button.bam
['QuitBtn_UP', 'QuitBtn_DN', 'QuitBtn_RLVR']
phase_3/models/gui/quit_button.bam
['QuitBtn_UP', 'QuitBtn_DN', 'QuitBtn_RLVR']
phase_3/models/gui/quit_button.bam
['QuitBtn_UP', 'QuitBtn_DN', 'QuitBtn_RLVR']
phase_3/models/gui/quit_button.bam
['QuitBtn_UP', 'QuitBtn_DN', 'QuitBtn_RLVR']
test2
{414000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74BAD0>, 406000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74B8F0>, 407000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74B968>, 416000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74BB20>, 409000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74BAA8>, 401000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E4B6300>, 402000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E738918>, 419000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74BB70>, 411000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74BA58>, 404000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74B940>, 413000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74BB48>, 415000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74BAF8>, 408000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74B9B8>, 417000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74BA80>, 410000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74B9E0>, 418000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74BBC0>, 403000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E4B3328>, 412000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74BA08>, 405000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74B8A0>, 420000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E74BB98>}
__handleAvatarChooserDone: 100000013, 'Little Zippy', ('rsl', 'ls', 'l', 'm', 19, 0, 19, 19, 10, 9, 0, 9, 7, 0), 1
2
Reading DNA file... phase_4/dna/storage.pdna
Reading DNA file... phase_3.5/dna/storage_interior.pdna
Traceback (most recent call last):
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\showbase\EventManager.py", line 61, in eventLoopTask
    self.doEvents()
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\showbase\EventManager.py", line 55, in doEvents
    processFunc(self.eventQueue.dequeueEvent())
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\showbase\EventManager.py", line 122, in processEvent
    messenger.send(eventName, paramList)
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\showbase\Messenger.py", line 397, in send
    self.__dispatch(acceptorDict, event, sentArgs, foundWatch)
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\showbase\Messenger.py", line 482, in __dispatch
    method (*(extraArgs + sentArgs))
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\gui\DirectButton.py", line 103, in commandFunc
    apply(self['command'], self['extraArgs'])
  File "mods/Toon Bot.txt", line 404, in loadScript
    execfile('Toon Bot/Scripts/'+script['name']+'.txt',globals())
  File "Toon Bot/Scripts/VP Maxer.txt", line 1515
    else:
       ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "otp\otpbase\OTPBase.py", line 236, in run
    taskMgr.run()
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\task\Task.py", line 502, in run
    self.step()
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\task\Task.py", line 460, in step
    self.mgr.poll()
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\showbase\EventManager.py", line 61, in eventLoopTask
    self.doEvents()
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\showbase\EventManager.py", line 55, in doEvents
    processFunc(self.eventQueue.dequeueEvent())
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\showbase\EventManager.py", line 122, in processEvent
    messenger.send(eventName, paramList)
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\showbase\Messenger.py", line 397, in send
    self.__dispatch(acceptorDict, event, sentArgs, foundWatch)
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\showbase\Messenger.py", line 482, in __dispatch
    method (*(extraArgs + sentArgs))
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\gui\DirectButton.py", line 103, in commandFunc
    apply(self['command'], self['extraArgs'])
  File "mods/Toon Bot.txt", line 404, in loadScript
    execfile('Toon Bot/Scripts/'+script['name']+'.txt',globals())
  File "Toon Bot/Scripts/VP Maxer.txt", line 1515
    else:
       ^
SyntaxError: invalid syntax
